--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 武继明的博客
+title: 猿明园
 subtitle: 笨鸟先飞，天道酬勤。
-description: 武继明的博客
+description: 万丈高楼平地起,切勿浮沙筑高台.
 keywords:
 author: 武继明
 language:
