--- a/_config.yml
+++ b/_config.yml
@@ -39,10 +39,10 @@ post_asset_folder: true
 relative_link: false
 future: true
 highlight:
-  enable: true
-  line_number: true
-  auto_detect: false
-  tab_replace:
+  enable: false
+  # line_number: true
+  # auto_detect: false
+  # tab_replace:
   
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
@@ -72,6 +72,18 @@ pagination_dir: page
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
+#RSS订阅
+plugin:
+- hexo-generator-feed
+#Feed Atom
+feed:
+  type: atom
+  path: atom.xml
+  limit: 20
+
+search:
+  path: search.xml
+  field: post
 ## Themes: https://hexo.io/themes/
 theme: 3-hexo
 
