--- a/themes/3-hexo/_config.yml
+++ b/themes/3-hexo/_config.yml
@@ -54,7 +54,7 @@ bottom_text: ©2019-2025 wujiming
 reward: true
 # true 开启打赏功能
 
-searchAll: false
+searchAll: true
 # true 启用全文搜索
 # 开启此功能需要下面操作：
 # 1. 在 hexo 根目录 执行 npm install hexo-generator-search --save 安装插件
