--- a/themes/3-hexo/_config.yml
+++ b/themes/3-hexo/_config.yml
@@ -163,7 +163,7 @@ friends:
 comment:
   on: true
   type: gitalk  # 评论系统：gitalk、disqus、gentie、gitment,注意：使用时，在下方对应位置进行配置
-  comment_count: true  # 文章标题下方显示评论数
+  comment_count: false  # 文章标题下方显示评论数
   preload_comment: tfalserue  # 预加载评论区
   ## false: 当点击评论条等区域时再加载评论模块
   ## true: 页面加载时加载评论区
