--- a/themes/3-hexo/_config.yml
+++ b/themes/3-hexo/_config.yml
@@ -185,7 +185,7 @@ gentie:
 gitalk:
   on: true
   githubID: wzslw
-  repo: my-gittalk
+  repo: omingo-cn/omingo-cn
   ClientID: 39ce50aafebf22ff500c
   ClientSecret: 4a379daf0cbc4a6cd3e2427ddcfa638b4e03270b
   adminUser: wzslw
@@ -207,7 +207,7 @@ gitalk:
 gitment:
   on: false
   owner: wzslw
-  repo: my-gittalk
+  repo: omingo-cn/omingo-cn
   client_id: 39ce50aafebf22ff500c
   client_secret: 4a379daf0cbc4a6cd3e2427ddcfa638b4e03270b
   # gitment : 通过github issue实现的评论系统
