--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://www.omingo.com
-root: /omingo-cn
+root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
