--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,10 @@ author: 武继明
 language:
 timezone:
 
+flowchart:
+  # raphael:   # optional, the source url of raphael.js
+  # flowchart: # optional, the source url of flowchart.js
+  options: # options used for `drawSVG`
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://www.omingo.com
